# Trajectory-Signatures-of-Deception-in-Large-Language-Models

./: .env.example  README.MD  pyproject.toml
llm_trajectory_toolkit/analysis/: __init__.py
llm_trajectory_toolkit/calibration/: __init__.py
llm_trajectory_toolkit/capture/: __init__.py
llm_trajectory_toolkit/geometry/: __init__.py
llm_trajectory_toolkit/models/: __init__.py  base_adapter.py
llm_trajectory_toolkit/prompts/: __init__.py
