[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-trajectory-toolkit"
version = "0.1.0"
description = "trajectory analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "LLM Trajectory Research Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "h5py>=3.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
ui = [
    "gradio>=4.0.0",
    "pillow>=10.0.0",
]
viz = [
    "umap-learn>=0.5.0",
]
quant = [
    "bitsandbytes>=0.41.0",
    "accelerate>=0.20.0",
]
calibration = [
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]


[project.urls]
Homepage = "https://github.com/dslmllab/Trajectory-Signatures-of-Deception-in-Large-Language-Models/llm-trajectory-toolkit"
Documentation = "https://github.com/dslmllab/Trajectory-Signatures-of-Deception-in-Large-Language-Models/llm-trajectory-toolkit#readme"

[tool.setuptools.packages.find]
include = ["llm_trajectory_toolkit*"]
exclude = [
    "archive*",
    "tests*",
    "docs*",
]

[tool.setuptools.package-data]
llm_trajectory_toolkit = [
    "visualization/web/*.html",
    "visualization/web/*.json",
    "visualization/*.sh",
    "visualization/*.md",
    "visualization/*.txt",
    "calibration/data/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
